# Pokemons

./: app.py  assets.py  commandes shell.txt  messages.pot  pyproject.toml  redis_cache.py
blueprints/: api_blueprint.py  pages_blueprint.py
static/css/: commun.css  details.css  liste.css
static/js/: details.js  liste.js
static/scss/: _commun.scss  _details.scss  _liste.scss  style.scss
templates/: base.html  template_liste.html  template_pokemon.html
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/fr/LC_MESSAGES/: messages.mo  messages.po
