[tool.poetry]
name = "dev python"
version = "0.1.0"
description = ""
authors = ["NicolasM <nicolasmillet1@orange.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
requests = "^2.32.3"
flask-assets = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
